# program-examples

./: .gitignore  .gitmodules  README.md  cli  migration.md  zk-blog-prompt.md  zk-compression-blog.md
account-comparison/programs/account-comparison/: Cargo.toml
account-comparison/programs/account-comparison/src/: lib.rs
account-comparison/programs/account-comparison/tests/: test_compressed_account.rs  test_solana_account.rs
airdrop-implementations/simple-claim/program/: Cargo.toml
airdrop-implementations/simple-claim/program/src/: error.rs  instruction.rs  lib.rs  processor.rs
airdrop-implementations/simple-claim/program/tests/: functional.rs
basic-operations/anchor/burn/programs/burn/: Cargo.toml
basic-operations/anchor/burn/programs/burn/src/: lib.rs
basic-operations/anchor/burn/programs/burn/tests/: test.rs
basic-operations/anchor/close/programs/close/: Cargo.toml
basic-operations/anchor/close/programs/close/src/: lib.rs
basic-operations/anchor/close/programs/close/tests/: test.rs
basic-operations/anchor/update/programs/update/: Cargo.toml
basic-operations/native/: Cargo.toml  README.md  package-lock.json  package.json
basic-operations/native/programs/burn/: Cargo.toml
basic-operations/native/programs/burn/src/: lib.rs
basic-operations/native/programs/burn/tests/: test.rs
basic-operations/native/programs/close/: Cargo.toml
basic-operations/native/programs/close/src/: lib.rs  test_helpers.rs
basic-operations/native/programs/close/tests/: test.rs
basic-operations/native/programs/create/: Cargo.toml
basic-operations/native/programs/create/src/: lib.rs  test_helpers.rs
basic-operations/native/programs/create/tests/: test.rs
basic-operations/native/programs/reinit/: Cargo.toml
basic-operations/native/programs/reinit/src/: lib.rs  test_helpers.rs
basic-operations/native/programs/reinit/tests/: test.rs
basic-operations/native/programs/update/: Cargo.toml
basic-operations/native/programs/update/src/: lib.rs  test_helpers.rs
basic-operations/native/programs/update/tests/: test.rs
c-token/: .gitignore  Cargo.toml
c-token/src/: lib.rs
c-token/tests/: client-close-ctoken.rs  client-create-cata.rs  client-create-cmint.rs  client-create-ctoken.rs  client-mint-to-ctoken.rs  client-transfer-interface.rs  devnet-client-create-cmint.rs
counter/: CLAUDE.md
counter/anchor-cpi-context/: Cargo.toml
counter/anchor-cpi-context/programs/counter/: Cargo.toml
counter/anchor-cpi-context/programs/counter/src/: lib.rs
counter/anchor-cpi-context/programs/counter/tests/: test.rs
counter/anchor-cpi-context/tests/: test.ts
counter/anchor/programs/counter/: Cargo.toml
counter/anchor/programs/counter/src/: lib.rs
counter/anchor/programs/counter/tests/: test.rs
counter/native/: Cargo.toml
counter/native/src/: lib.rs
counter/native/tests/: test.rs
counter/pinocchio/: Cargo.toml
counter/pinocchio/src/: lib.rs
counter/pinocchio/tests/: test.rs
create-and-update/: Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
create-and-update/programs/create-and-update/: Cargo.toml
create-and-update/programs/create-and-update/src/: lib.rs
create-and-update/src/: lib.rs
create-and-update/tests/: create_and_update.ts  test.rs  test_create_two_accounts.rs
ctoken-minter/: Cargo.toml
ctoken-minter/src/: lib.rs
ctoken-minter/src/instructions/: create_compressed_mint.rs  mod.rs
ctoken-minter/tests/: test.rs
ctoken/spl-ctoken/: Cargo.toml
ctoken/spl-ctoken/src/: lib.rs
ctoken/spl-ctoken/tests/: scenario_spl.rs
light-token/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
light-token/programs/src/: create_cmint.rs
light-token/programs/tests/: client-close-ctoken.rs  client-create-cmint.rs  client-create-ctoken.rs  client-mint-to-ctoken.rs  client-transfer-interface.rs  devnet-client-create-mint.rs  devnet-client-mint-to-ctoken.rs  devnet-spl-ctoken-transfer.rs
light-token/src/: create_mint.rs  lib.rs  mint_to.rs  transfer_interface.rs  transfer_spl_to_light_token.rs
light-token/tests/: close.rs  create-ata-interface.test.ts  create-ata.rs  create-mint.rs  create-mint.test.ts  create-token-account.rs  devnet-spl-to-light-transfer.rs  mint-to.rs  mint-to.test.ts  transfer-interface.rs  transfer-interface.test.ts
lowlevel/: Cargo.toml  README.md  build.rs
lowlevel/scripts/: setup.sh
lowlevel/src/: lib.rs
lowlevel/tests/: circuit.rs  test.rs
native-program-update/program/: Cargo.toml
native-program-update/program/src/: lib.rs
native-program-update/program/tests/: test.rs
read-only/: CLAUDE.md  Cargo.toml  README.md
read-only/src/: lib.rs
read-only/tests/: test.rs
zk-id/: .gitignore  Cargo.toml  README.md  build.rs
zk-id/circuits/: README.md  compressed_account_merkle_proof.circom
zk-id/scripts/: setup.sh
zk-id/src/: lib.rs  verifying_key.rs
zk-id/tests/: circuit.rs  test.rs
zk/confidential-transfer/: CLAUDE.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json
zk/confidential-transfer/circuits/: merkle_proof.circom  private_transfer.circom  range_check.circom
zk/confidential-transfer/scripts/: setup.sh
zk/confidential-transfer/src/: lib.rs  verifying_key.rs
zk/confidential-transfer/tests/: test.rs
zk/mixer/: .gitignore  CLAUDE.md  Cargo.toml  README.md  Xargo.toml  build.rs  package.json
zk/mixer/circuits/: README.md  compressed_account.circom  merkletree.circom  withdraw.circom
zk/mixer/scripts/: clean.sh  setup.sh
zk/mixer/src/: lib.rs  verifying_key.rs
zk/mixer/tests/: test.rs
zk/nullifier/programs/nullifier/: Cargo.toml
zk/nullifier/programs/nullifier/src/: lib.rs
zk/zk-id/: Anchor.toml  CLAUDE.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json
zk/zk-id/circuits/: compressed_account_merkle_proof.circom  merkle_proof.circom
zk/zk-id/programs/zk-id/: Cargo.toml  build.rs
zk/zk-id/programs/zk-id/src/: lib.rs  verifying_key.rs
zk/zk-id/src/: lib.rs  verifying_key.rs
zk/zk-id/tests/: circuit.rs  test.rs
zk/zk-id/ts-tests/: zk-id.test.ts
(+214 files in other folders)
