[package]
name = "c-token-examples"
version = "0.1.0"
description = "Client examples for compressed tokens (cToken) using Light Protocol"
repository = "https://github.com/Lightprotocol/program-examples"
license = "Apache-2.0"
edition = "2021"

# No lib - this is a test-only crate
[[test]]
name = "client-create-cmint"
path = "tests/client-create-cmint.rs"

[[test]]
name = "client-create-ctoken"
path = "tests/client-create-ctoken.rs"

[[test]]
name = "client-create-cata"
path = "tests/client-create-cata.rs"

[[test]]
name = "client-mint-to-ctoken"
path = "tests/client-mint-to-ctoken.rs"

[[test]]
name = "client-transfer-interface"
path = "tests/client-transfer-interface.rs"

[[test]]
name = "client-close-ctoken"
path = "tests/client-close-ctoken.rs"

[dev-dependencies]
# Light Protocol dependencies (pinned to specific commit)
light-ctoken-sdk = { git = "https://github.com/Lightprotocol/light-protocol", rev = "3b811efce9b1fe2a34e9fb4332bb65cf39dc4df1" }
light-ctoken-interface = { git = "https://github.com/Lightprotocol/light-protocol", rev = "3b811efce9b1fe2a34e9fb4332bb65cf39dc4df1" }
light-client = { git = "https://github.com/Lightprotocol/light-protocol", rev = "3b811efce9b1fe2a34e9fb4332bb65cf39dc4df1" }
light-program-test = { git = "https://github.com/Lightprotocol/light-protocol", rev = "3b811efce9b1fe2a34e9fb4332bb65cf39dc4df1", features = ["devenv"] }
light-test-utils = { git = "https://github.com/Lightprotocol/light-protocol", rev = "3b811efce9b1fe2a34e9fb4332bb65cf39dc4df1", features = ["devenv"] }

# Solana dependencies
solana-sdk = "2.2"
solana-program = "2.2"

# SPL dependencies
anchor-spl = "0.31.1"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }

# Serialization
borsh = "0.10.4"

# Async runtime
tokio = { version = "1.36.0", features = ["full"] }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
