[package]
name = "c-token-examples"
version = "0.1.0"
description = "Client examples for compressed tokens (cToken) using Light Protocol"
repository = "https://github.com/Lightprotocol/program-examples"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "c_token_examples"

[[test]]
name = "client-create-cmint"
path = "tests/client-create-cmint.rs"

[[test]]
name = "client-create-ctoken"
path = "tests/client-create-ctoken.rs"

[[test]]
name = "client-create-cata"
path = "tests/client-create-cata.rs"

[[test]]
name = "client-mint-to-ctoken"
path = "tests/client-mint-to-ctoken.rs"

[[test]]
name = "client-close-ctoken"
path = "tests/client-close-ctoken.rs"

[[test]]
name = "client-transfer-interface"
path = "tests/client-transfer-interface.rs"

[[test]]
name = "devnet-spl-ctoken-transfer"
path = "tests/devnet-spl-ctoken-transfer.rs"

[dependencies]
# Light Protocol SDK dependencies
light-ctoken-sdk = "0.2.1"
light-ctoken-interface = "0.1.1"
light-sdk = { version = "0.17.1", features = ["v2"] }

# Solana dependencies
solana-program = "2.2"

# Serialization
borsh = "0.10.4"

[dev-dependencies]
# Light Protocol test dependencies
light-program-test = { version = "0.17.1", features = ["v2"] }
light-client = "0.17.2"

# Solana dependencies
solana-sdk = "2.2"

# SPL dependencies
spl-token = "7"
spl-token-2022 = "7"
spl-pod = "0.5"
anchor-spl = "0.31"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde_json = "1"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
