[package]
name = "create-and-update"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "create_and_update"

[features]
default = []
test-sbf = []

[dependencies]
anchor-lang = "0.31.1"
borsh = "0.10.4"
light-sdk = { version = "0.15.0", features = ["anchor"] }
light-hasher = { version = "4.0", features = ["solana"] }
light-sdk-types = "0.15.0"

[dev-dependencies]
light-program-test = "0.15.0"
light-client = "0.15.0"
tokio = "1.43.0"
solana-sdk = "2.2"
