[package]
name = "create-and-update"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "create_and_update"

[features]
default = []
test-sbf = []

[dependencies]
anchor-lang = "0.31.1"
borsh = "0.10.4"
light-sdk = { git = "https://github.com/Lightprotocol/light-protocol", features = ["anchor", "v2"], rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
light-hasher = { git = "https://github.com/Lightprotocol/light-protocol", rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
light-sdk-types = { git = "https://github.com/Lightprotocol/light-protocol", features = ["v2"], rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }

[dev-dependencies]
light-program-test = { git = "https://github.com/Lightprotocol/light-protocol", features = ["v2"], rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
light-client = { git = "https://github.com/Lightprotocol/light-protocol", features = ["v2"], rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
tokio = "1.43.0"
solana-sdk = "2.2"
serial_test = "3.2.0"
