[package]
name = "create-and-update"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "create_and_update"

[features]
default = []
test-sbf = []

[dependencies]
anchor-lang = "0.31.1"
borsh = "0.10.4"
light-sdk = { version = "0.16.0" , features = ["anchor", "v2"] }
light-hasher = "5.0.0"
light-sdk-types = { version = "0.16.0" , features = ["v2"] }

[dev-dependencies]
light-program-test = { version = "0.16.0" , features = ["v2"] }
light-client = { version = "0.16.0" , features = ["v2"] }
tokio = "1.43.0"
solana-sdk = "2.2"
serial_test = "3.2.0"
