[package]
name = "lowlevel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lowlevel"

[features]
default = []
test-sbf = []

[dependencies]
anchor-lang = "0.31.1"
borsh = "0.10.4"
light-sdk = { version = "0.15.0", features = ["anchor", "v2"] }
light-hasher = { version = "4.0.0", features = ["solana"] }
light-sdk-types = "0.15.0"
light-compressed-account = {version = "0.5.0"}
light-concurrent-merkle-tree = "2"
# use cpi feature to avoid custom allocator conflict issues
account-compression = { version = "2", features = ["cpi"] }

[dev-dependencies]
light-program-test = "0.15.0"
light-client = "0.15.0"
tokio = "1.40.0"
solana-sdk = "2.2"
circom-prover = "0.1"
rust-witness = "0.1"
num-bigint = "0.4"
serde_json = "1.0"
light-merkle-tree-reference = "3.0.0"
light-compressed-account = {version = "0.5.0", features = ["new-unique"]}

[build-dependencies]
rust-witness = "0.1"
