[package]
name = "read-only"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "read_only"

[features]
default = []
test-sbf = []

[dependencies]
anchor-lang = "0.31.1"
borsh = "0.10.4"
light-sdk = { version = "0.17.1", features = ["anchor", "v2"] }
light-sdk-types = { version = "0.17.1", features = ["v2"] }
light-compressed-account = "0.7.0"

[dev-dependencies]
light-program-test = { version = "0.17.1", features = ["v2"] }
light-client = { version = "0.17.2", features = ["v2"] }
tokio = "1.43.0"
solana-sdk = "2.2"
serial_test = "3.2.0"
