[package]
name = "read-only"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "read_only"

[features]
default = []
test-sbf = []

[dependencies]
anchor-lang = "0.31.1"
borsh = "0.10.4"
light-compressed-account = "0.8.0"
light-sdk = { version = "0.18.0", features = ["anchor", "anchor-discriminator", "cpi-context"] }

[dev-dependencies]
light-program-test = "0.18.0"
light-client = "0.18.0"
tokio = "1.43.0"
solana-sdk = "2.2"
serial_test = "3.2.0"
