[package]
name = "zk-id"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_id"

[features]
default = []
test-sbf = []

[dependencies]
anchor-lang = "0.31.1"
borsh = "0.10.4"
light-sdk = { path = "/Users/ananas/dev/light-protocol3/sdk-libs/sdk", features = ["anchor", "poseidon"] }
light-hasher = { path = "/Users/ananas/dev/light-protocol3/program-libs/hasher" }
light-sdk-types = { path = "/Users/ananas/dev/light-protocol3/sdk-libs/sdk-types" }
light-compressed-account = { path = "/Users/ananas/dev/light-protocol3/program-libs/compressed-account" }
# use cpi feature to avoid custom allocator conflict issues
account-compression = { version = "2", features = ["cpi"] }
groth16-solana = { path = "/Users/ananas/dev/groth16-solana" }
light-concurrent-merkle-tree = "2"

[dev-dependencies]
light-program-test = { path = "/Users/ananas/dev/light-protocol3/sdk-libs/program-test" }
light-client = { path = "/Users/ananas/dev/light-protocol3/sdk-libs/client" }
tokio = "1.40.0"
solana-sdk = "2.2"
circom-prover = "0.1"
rust-witness = "0.1"
num-bigint = "0.4"
serde_json = "1.0"
light-compressed-account = { path = "/Users/ananas/dev/light-protocol3/program-libs/compressed-account", features = ["new-unique"] }
light-merkle-tree-reference= { path = "/Users/ananas/dev/light-protocol3/program-tests/merkle-tree" }
groth16-solana = { path = "/Users/ananas/dev/groth16-solana", features = ["vk", "circom"] }

[build-dependencies]

[target.'cfg(not(target_os = "solana"))'.build-dependencies]
rust-witness = "0.1"
groth16-solana = { path = "/Users/ananas/dev/groth16-solana", features = ["vk"] }
