[workspace]
members = [
    "programs/create",
    "programs/update",
    "programs/close",
    "programs/reinit",
    "programs/burn",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
