[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# [patch.crates-io]
# # Profiling logs and state is handled here
# solana-program-runtime = { git = "https://github.com/Lightprotocol/agave", rev = "580e29f03e4176a4a5525abc188a948c6595c47f" }
# # Profiling syscalls are defined here
# solana-bpf-loader-program = { git = "https://github.com/Lightprotocol/agave", rev = "580e29f03e4176a4a5525abc188a948c6595c47f" }
# # Patch solana-program-memory to use older version where is_nonoverlapping is public
# solana-program-memory = { git = "https://github.com/anza-xyz/solana-sdk", rev = "1c1d667f161666f12f5a43ebef8eda9470a8c6ee" }
# litesvm = { git = "https://github.com/Lightprotocol/litesvm", rev = "d4f7ffb0025b73cb75ef2f198121a4e51b725b5d" }
