[package]
name = "counter"
version = "1.0.0"
description = "Native counter program using light protocol"
repository = "https://github.com/Lightprotocol/program-examples"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []

[dependencies]
light-sdk = "0.13.0"
light-sdk-types = "0.13.0"
light-hasher = { version = "3.1.0", features = ["solana"] }
solana-program = "2.2"
light-macros = { version = "2.1.0", features = ["solana"] }
borsh = "0.10.4"
light-compressed-account = { version = "0.3.0", features = ["solana"] }

[dev-dependencies]
light-program-test = "0.13.1"
light-client = "0.13.0"
tokio = "1.43.0"
solana-sdk = "2.2"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
