[package]
name = "counter"
version = "1.0.0"
description = "Native counter program using light protocol"
repository = "https://github.com/Lightprotocol/program-examples"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []

[dependencies]
light-sdk = { git = "https://github.com/Lightprotocol/light-protocol", rev = "a3497b138860f56311bab8230f9953de786162fe" }
light-sdk-types = { git = "https://github.com/Lightprotocol/light-protocol", rev = "a3497b138860f56311bab8230f9953de786162fe" }
light-hasher = { git = "https://github.com/Lightprotocol/light-protocol", rev = "a3497b138860f56311bab8230f9953de786162fe", features = ["solana"] }
solana-program = "2.2"
light-macros = { git = "https://github.com/Lightprotocol/light-protocol", rev = "a3497b138860f56311bab8230f9953de786162fe", features = ["solana"] }
borsh = "0.10.4"
light-compressed-account = { git = "https://github.com/Lightprotocol/light-protocol", rev = "a3497b138860f56311bab8230f9953de786162fe", features = ["solana"] }

[dev-dependencies]
light-program-test = { git = "https://github.com/Lightprotocol/light-protocol", rev = "a3497b138860f56311bab8230f9953de786162fe" }
light-client = { git = "https://github.com/Lightprotocol/light-protocol", rev = "a3497b138860f56311bab8230f9953de786162fe" }
tokio = "1.43.0"
solana-sdk = "2.2"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
