[package]
name = "counter"
version = "1.0.0"
description = "Native counter program using light protocol"
repository = "https://github.com/Lightprotocol/program-examples"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []

[dependencies]
light-sdk = "0.18.0"
light-hasher = "5.0.0"
light-compressed-account = "0.8.0"
solana-program = "2.2"
light-macros = "2.2.0"
borsh = "0.10.4"

[dev-dependencies]
light-program-test = "0.18.0"
light-client = "0.18.0"
tokio = "1.43.0"
solana-sdk = "2.2"
blake3 = "=1.8.2"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
