[package]
name = "counter"
version = "1.0.0"
description = "Pinocchio counter program using light protocol"
repository = "https://github.com/Lightprotocol/program-examples"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []

[dependencies]
light-sdk-pinocchio = { git = "https://github.com/Lightprotocol/light-protocol", features = ["light-account"], rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
light-sdk-types = { git = "https://github.com/Lightprotocol/light-protocol", rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
light-hasher = { git = "https://github.com/Lightprotocol/light-protocol", rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
pinocchio = "0.9.2"
light-macros = { git = "https://github.com/Lightprotocol/light-protocol", rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
borsh = "0.10.4"
solana-pubkey = "2.3"

[dev-dependencies]
light-program-test = { git = "https://github.com/Lightprotocol/light-protocol", rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
light-client = { git = "https://github.com/Lightprotocol/light-protocol", rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
tokio = "1.43.0"
solana-sdk = "2.3"
light-hasher = { git = "https://github.com/Lightprotocol/light-protocol", features = ["solana"], rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
light-compressed-account = { git = "https://github.com/Lightprotocol/light-protocol", features = ["solana"], rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }
light-sdk = { git = "https://github.com/Lightprotocol/light-protocol", rev = "214bcc42799bb3e685a5e036637d257f8d4551a2" }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
