[package]
name = "counter"
version = "1.0.0"
description = "Pinocchio counter program using light protocol"
repository = "https://github.com/Lightprotocol/program-examples"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []

[dependencies]
light-sdk-pinocchio = { version = "0.16.0" , features = ["light-account"] }
light-sdk-types = "0.16.0"
light-hasher = "5.0.0"
pinocchio = "0.9.2"
light-macros = "2.1.0"
borsh = "0.10.4"
solana-pubkey = "2.3"

[dev-dependencies]
light-program-test = "0.16.0"
light-client = "0.16.0"
tokio = "1.43.0"
solana-sdk = "2.3"
light-hasher = { version = "5.0.0", features = ["solana"] }
light-compressed-account = { version = "0.6.0", features = ["solana"] }
light-sdk = "0.16.0"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
