[package]
name = "native-program-update"
version = "0.1.0"
description = "Native Solana program for updating compressed accounts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_program_update"

[features]
no-entrypoint = []
test-sbf = []
default = []

[dependencies]
light-sdk = { version = "0.15.0" }
light-sdk-types = { version = "0.15.0" }
light-hasher = { version = "3.1.0", features = ["solana"] }
light-macros = { version = "2.1.0", features = ["solana"] }
solana-program = "2.2"
borsh = "0.10.4"

[dev-dependencies]
light-program-test = { version = "0.15.0" }
light-client = { version = "0.15.0" }
tokio = "1.36.0"
solana-sdk = "2.2"
native-program-create = { path = "../../native-program-create/program" }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
