[package]
name = "confidential_transfer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "confidential_transfer"

[features]
default = []
test-sbf = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
blake3 = "=1.5.5"
anchor-lang = "0.31.1"
borsh = "0.10.4"
light-sdk = { version = "0.17.1", features = ["anchor", "poseidon", "merkle-tree", "v2"] }
light-hasher = "5.0.0"
light-sdk-types = { version = "0.17.1", features = ["v2", "poseidon"] }
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev = "66c0dc87d0808c4d2aadb53c61435b6edb8ddfd9" }
anchor-spl = "0.31.1"

[dev-dependencies]
light-program-test = { version = "0.17.1", features = ["v2"] }
light-client = { version = "0.17.2", features = ["v2"] }
tokio = "1.40.0"
solana-sdk = "2.2"
circom-prover = "0.1"
rust-witness = "0.1"
num-bigint = "0.4"
serde_json = "1.0"
light-compressed-account = { version = "0.7.0", features = ["new-unique", "poseidon"] }
light-merkle-tree-reference = "4.0.0"
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", features = ["vk", "circom"], rev = "66c0dc87d0808c4d2aadb53c61435b6edb8ddfd9" }
rand = "0.8"
anchor-spl = { version = "0.31.1", features = ["idl-build"] }

[build-dependencies]

[target.'cfg(not(target_os = "solana"))'.build-dependencies]
rust-witness = "0.1"
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", features = ["vk"], rev = "66c0dc87d0808c4d2aadb53c61435b6edb8ddfd9" }
