[package]
name = "account-comparison"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "account_comparison"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
light-hasher = { git = "https://github.com/Lightprotocol/light-protocol", rev = "70a725b6dd44ce5b5c6e3b2ffc9ee53928027b8f", features = ["solana"] }
light-sdk = { git = "https://github.com/Lightprotocol/light-protocol", rev = "70a725b6dd44ce5b5c6e3b2ffc9ee53928027b8f", features = ["anchor", "v2"] }
light-sdk-types = { git = "https://github.com/Lightprotocol/light-protocol", rev = "70a725b6dd44ce5b5c6e3b2ffc9ee53928027b8f", features = ["anchor"] }
light-compressed-account = { git = "https://github.com/Lightprotocol/light-protocol", rev = "70a725b6dd44ce5b5c6e3b2ffc9ee53928027b8f", features = ["anchor"] }
light-batched-merkle-tree = { git = "https://github.com/Lightprotocol/light-protocol", rev = "70a725b6dd44ce5b5c6e3b2ffc9ee53928027b8f", features = ["solana"] }
borsh = "0.10.4"

[dev-dependencies]
light-client = { git = "https://github.com/Lightprotocol/light-protocol", rev = "70a725b6dd44ce5b5c6e3b2ffc9ee53928027b8f" }
litesvm = "0.7.0"
solana-keypair = "2.2"
solana-message = "2.2"
solana-pubkey = { version = "2.2", features = ["curve25519", "sha2"] }
solana-signer = "2.2"
solana-transaction = "2.2"
light-program-test = { git = "https://github.com/Lightprotocol/light-protocol", rev = "70a725b6dd44ce5b5c6e3b2ffc9ee53928027b8f", features = ["v2"] }
tokio = "1.43.0"
solana-sdk = "2.2"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
