[package]
name = "light-compressed-claim"
version = "0.1.0"
description = "Light Protocol Compressed Claim"
authors = ["Light Protocol maintainers <info@lightprotocol.io>"]
repository = "https://github.com/lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []
cpi = []

default = ["cpi"]

[dependencies]
solana-program = "2.3"
light-compressed-account = { version = "0.7" }
light-ctoken-sdk = { version = "0.2", features = ["v1"] }
thiserror = "2.0.11"
borsh = "0.10.0"
light-sdk = { version = "0.17" }
spl-token = { version = "5.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = "2.3"
light-program-test = { version = "0.17", features = ["v2"] }
light-client = { version = "0.17", features = ["v2"] }
tokio = "1.4"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = ['cfg(target_os, values("solana"))']


