[package]
name = "light-compressed-claim"
version = "0.1.0"
description = "Light Protocol Compressed Claim"
authors = ["Light Protocol maintainers <info@lightprotocol.io>"]
repository = "https://github.com/lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []
cpi = []

default = ["cpi"]

[dependencies]
solana-program = "2.3"
thiserror = "2.0.18"
borsh = "0.10.0"
light-compressed-account = "0.11.0"
light-token = "0.23.0"
light-compressed-token-sdk = { version = "0.23.0", features = ["v1"] }
light-sdk = "0.23.0"
spl-token = { version = "5.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = "2.3"
light-program-test = "0.23.0"
light-client = "0.23.0"
tokio = "1.49.0"
blake3 = "=1.8.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = ['cfg(target_os, values("solana"))']


