[package]
name = "native-program-burn"
version = "0.1.0"
description = "Native Solana program for burning compressed accounts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_program_burn"

[features]
no-entrypoint = []
test-sbf = ["test-helpers"]
test-helpers = ["dep:light-program-test", "dep:solana-sdk"]
default = []

[[test]]
name = "test"
required-features = ["test-helpers"]

[dependencies]
light-sdk = { version = "0.17", features = ["v2"] }
light-sdk-types = { version = "0.17.1", features = ["v2"] }
light-hasher = { version = "5.0.0", features = ["solana"] }
light-macros = { version = "2.2.0", features = ["solana"] }
solana-program = "2.2"
borsh = "0.10.4"
light-program-test = { version = "0.17.1", optional = true }
solana-sdk = { version = "2.2", optional = true }

[dev-dependencies]
light-client = "0.17.2"
tokio = "1.36.0"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
